Fix page title truncation

--- a/frontend/src/layout/navigation-3000/components/TopBar.scss
+++ b/frontend/src/layout/navigation-3000/components/TopBar.scss
@@ -9,6 +9,11 @@
     height: var(--breadcrumbs-height-full);
     white-space: nowrap;
     pointer-events: none;
+
+    .EditableField__display {
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
 }
 
 .TopBar3000__content {
@@ -83,6 +88,7 @@
     }
 
     &.TopBar3000__breadcrumb--here {
+        flex-shrink: 1;
         cursor: default;
         visibility: var(--breadcrumbs-title-small-visibility);
 
